
$Id$

vim: spelllang=en spell

-------------------------------------------------------------------------------

Changes since 1.4.0:

* Added a userspace library for accessing the application interface. This
  library is licensed under LGPLv2.
* Added distributed clocks support.
* Added watchdog configuration via application interface (thanks to J. Mohre).
* Added VoE mailbox protocol support.
* Improved the callback mechanism. ecrt_master_callbacks() now takes two
  callback functions for sending and receiving datagrams.
  ecrt_master_send_ext() is used to execute the sending of non-application
  datagrams.
* Separated datagram initialization from filling the payload with zeros.
  Introduced new method ec_datagram_zero() for that.
* Added phy_read and phy_write commands to ethercat tool.
* Added e100 driver for Intel PRO/100 NICs.
    - Added e100 driver for 2.6.27.
    - Added e100 driver for 2.6.28, thanks to Kim. H. Madsen.
    - Added e100 driver for 2.6.29, thanks to Andre Puschmann.
    - Added e100 driver for 2.6.31.
* Added 8139too driver for kernels 2.6.25 (F. Pose), 2.6.26 (M. Luescher),
  2.6.27, 2.6.28 and 2.6.29 (M. Goetze).
* Added e1000 driver for 2.6.26 (M. Luescher).
* Added r8169 driver for 2.6.24, 2.6.28 and 2.6.29.
* Debug interfaces are created with the Ethernet addresses of the attached
  physical device.
* Improved error case return codes of many functions.
* Implemented the File Access over EtherCAT (FoE) mailbox protocol, thanks to
  O. Zarges.
* Going to the Bootstrap state is now supported by the state machines and the
  command-line tool.
* Added ecrt_open_master() and ecrt_master_reserve() separation for
  the userspace library (thanks to Martin Troxler).
* Added bus information interface (methods ecrt_master(),
  ecrt_master_get_slave(), ecrt_master_get_sync_manager(),
  ecrt_master_get_pdo() and ecrt_master_get_pdo_entry()) to get information
  about the currently connected slaves and the PDO entries provided (thanks to